// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Content Component should not render anything by default 1`] = `<div />`;

exports[`Settings Content Component should render when test is in draft mode 1`] = `
<div>
  <ContentText
    color="gray.600"
    fontSize="200"
  >
    <span>
      You may continue to adjust these settings and template variants while this test is in
       
    </span>
    draft
    <span>
       mode.
    </span>
  </ContentText>
  <ContentText
    color="gray.600"
    fontSize="200"
  >
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/"
    >
      Learn more about configuring AB tests
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Settings Content Component should render when test is in scheduled mode 1`] = `
<div>
  <ContentText
    color="gray.600"
    fontSize="200"
  >
    <span>
      You may continue to adjust these settings and template variants while this test is in
       
    </span>
    scheduled
    <span>
       mode.
    </span>
  </ContentText>
  <ContentText
    color="gray.600"
    fontSize="200"
  >
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/"
    >
      Learn more about configuring AB tests
    </ExternalLink>
    .
  </ContentText>
</div>
`;
